<resources>
    <string name="app_name">Bhaktivedanta Library</string>
    <string name="title_books">Books</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_settings">Settings</string>
    <string name="title_search">Search</string>
    <string name="title_quick_access">Quick Access</string>
    <string name="current_bookName"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>