<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_books">

    <fragment
        android:id="@+id/navigation_books"
        android:name="com.example.book.ui.books.BooksFragment"
        android:label="@string/title_books"
        tools:layout="@layout/fragment_books" >
        <action
            android:id="@+id/action_navigation_books_to_l1Fragment"
            app:destination="@id/l1Fragment" >
            <argument
                android:name="title" />
            <argument
                android:name="pageNumber"
                android:defaultValue="0" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_bookmarks"
        android:name="com.example.book.ui.bookmarks.BookmarksFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_bookmarks" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.book.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.book.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/l1Fragment"
        android:name="com.example.book.ui.Level1.Books.L1Fragment"
        tools:layout="@layout/fragment_l1"
        android:label="{title}">
        <action
            android:id="@+id/action_l1Fragment_to_navigation_books"
            app:destination="@id/navigation_books"
            />
        <argument
            android:name="title"
            app:argType="string" />
        <action
            android:id="@+id/l1Book_to_books"
            app:destination="@id/navigation_books"
             />
        <action
            android:id="@+id/action_l1Fragment_to_l1ChaptersFragment"
            app:destination="@id/l1ChaptersFragment" />
    </fragment>
    <fragment
        android:id="@+id/l1ChaptersFragment"
        android:name="com.example.book.ui.Level1.chapters.L1ChaptersFragment"
        android:label="Chapters"
        tools:layout="@layout/fragment_l1_chapters">
        <action
            android:id="@+id/action_l1ChaptersFragment_to_l1Fragment"
            app:destination="@id/l1Fragment"
            app:popUpTo="@id/navigation_books"
            app:popUpToInclusive="false"
            />
    </fragment>
</navigation>